--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "name": "Secure Key Extension",
     "version": "1.0",
     "description": "An extension that requires a secret key to unlock features.",
-    "permissions": ["storage", "activeTab"],
+    "permissions": ["storage", "activeTab", "tabs", "scripting"],
     "background": {
         "service_worker": "background.js"
     },
